fix: better URL syntax check